infer/tests/codetoanalyze/cpp/errors/types/typeid_expr.cpp
../../frontend/types/typeid_expr.cpp